# tabbify-codeservice

./: Cargo.toml
src/: broker_client.rs  lib.rs  main.rs  paths.rs  repo.rs  router.rs  state.rs  treesitter.rs
src/lsp/: jsonrpc.rs  manager.rs  mod.rs
src/methods/: edit.rs  git.rs  mod.rs  read.rs  search.rs  symbols.rs
tests/: broker_delegation.rs  commit_method.rs  confinement.rs  contract_compile.rs  edit_methods.rs  lsp_jsonrpc.rs  read_methods.rs  references_lsp.rs  router.rs  search_methods.rs  symbols_fallback.rs  treesitter.rs
