[package]
name = "tabbify-codeservice"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Unprivileged in-FC code-intelligence daemon: serves CodeServiceRpc on :8731, fronting rust-analyzer (LSP), ripgrep, fd, and tree-sitter. Confined to ~/projects + ~/knowledge."
publish = false

[[bin]]
name = "tabbify-codeservice"
path = "src/main.rs"

[lib]
name = "tabbify_codeservice"
path = "src/lib.rs"

[lints.clippy]
all = { level = "warn", priority = -1 }

[dependencies]
tabbify-workspace-contract = { path = "../tabbify-workspace-contract" }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
which = "6"
walkdir = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
